--- a/README
+++ b/README
@@ -30,22 +30,30 @@ METHODS
             from the Check Points array.
 
         Average Speed
-            Calculation of the Speed from the Elapsed Time and Distance.
+            Calculation of the averages of the non-zero Speed values from
+            the Check Points array. Used to be just the division of the
+            Distance by the Elapsed Time, but the Elapsed Time is the time
+            of the race, where as the Distance is the whole distance,
+            including any warmup time. This lead to incorrect Average Speed
+            calculations in version 0.01.
 
         Average Watts
             Calculation of the averages of the non-zero Watts values from
             the Check Points array.
 
+        Cadence
+            The overall Cadence of the training session, in miles.
+
         Check Points
             This is an array of each sample taken during the training
-            session. Each array element is an anonmyous hash with the
+            session. Each array element is an anonymous hash with the
             following keys:
 
             Altitude
-                The instantaenous Altitude at the Elapsed Time.
+                The instantaneous Altitude at the Elapsed Time.
 
             Cadence
-                The instantaenous Cadence at the Elapsed Time.
+                The instantaneous Cadence at the Elapsed Time.
 
             Elapsed Time
                 A calculation of when the sample was taken, based on the
@@ -53,17 +61,17 @@ METHODS
                 Number is in seconds.
 
             Grade
-                The instantaenous Grade at the Elapsed Time.
+                The instantaneous Grade at the Elapsed Time.
 
             Heart Rate
-                The instantaenous Heart Rate at the Elapsed Time.
+                The instantaneous Heart Rate at the Elapsed Time.
 
             Speed
-                The instantaenous Speed at the Elapsed Time. Number is in
+                The instantaneous Speed at the Elapsed Time. Number is in
                 miles per hour.
 
             Watts
-                The instantaenous Watts at the Elapsed Time.
+                The instantaneous Watts at the Elapsed Time.
 
         Distance
             The overall Distance of the training session, in miles.
@@ -100,6 +108,16 @@ METHODS
         Start Time
             The start time of the training session, in a UNIX time_t format.
 
+VARIABLES
+    $timeDelta
+        Number of minutes the time listed in the file name and the time
+        listed inside the file can vary before throwing an error. The
+        default is 1 minute.
+
+    $maxWatts
+        The maximum watts can be, to be used in calculating the Average
+        Watts. The default is 2000 watts.
+
 SEE ALSO
     http://www.whitepeak.org/Raw.aspx
 
@@ -109,6 +127,10 @@ NOTES
     the Grade was 0, whereas the field he listed as Unknown had positive and
     negative values, and looks to me to be Grade * 10, so I have implemented
     the code to show this deviation from Martin's documentation.
+
+    Based on some empirical data, I believe the Unknown value listed after
+    the Distance, is really Cadence for the entire time. I have added the
+    Cadence field in addition to Average Cadence.
 
 AUTHOR
     Jim Pirzyk, <jim+perl@pirzyk.org>
